--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -45,10 +45,14 @@
     </div>
   </div>
 
+  <!-- <script src = "samples.json"></script> -->
+  <script src = "../data/samples.json"></script>
+  <!-- <script src="/visualization-challenge/data/samples.json"></script> -->
+
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
+  <!-- <script src="./static/js/bonus.js"></script> -->
   
 </body>
 
