20220429 - Added in the promise for the bio samples
- Worked out 3 types of promise to get the data.
- Will be deleting two of them to move forward with the hw.

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -45,9 +45,8 @@
     </div>
   </div>
 
-  <!-- <script src = "samples.json"></script> -->
+  <!-- Biodiversity data -->
   <script src = "../data/samples.json"></script>
-  <!-- <script src="/visualization-challenge/data/samples.json"></script> -->
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
