--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -22,7 +22,10 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onchange="optionChanged(this.value)">
+            <option value="dataset1">DataSet1</option>
+            <option value="dataset2">DataSet2</option>
+          </select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
